update POST method

--- a/src/app/pages/add-flight/add-flight.component.html
+++ b/src/app/pages/add-flight/add-flight.component.html
@@ -15,7 +15,7 @@
             <div class="form-field">
                 <label for="flight-id">Mã chuyến</label>
                 <input type="text" id="flight-id" name="flight-id"
-                
+                disabled="disabled"
                 [(ngModel)]="addFlightRequest.maChuyenBay">
             </div>
     
