--- a/src/app/pages/edit-flight/edit-flight.component.html
+++ b/src/app/pages/edit-flight/edit-flight.component.html
@@ -2,7 +2,7 @@
     CHỈNH SỬA CHUYẾN BAY
 </div>
 <div class="flight-detail-form">
-    <form #form="ngForm" (ngSubmit)="addFlight()">
+    <form #form="ngForm" (ngSubmit)="updateFlight()">
         <h1 style="font-weight: bold;padding-bottom: 10px;color: #146C94;">THÔNG TIN CHUYẾN BAY</h1>
 
         <div class="flight-data-fields">
