--- a/src/app/pages/add-flight/add-flight.component.html
+++ b/src/app/pages/add-flight/add-flight.component.html
@@ -12,12 +12,13 @@
             font-weight: bold;
             color: #146C94;
             margin: 0px 0px 10px 0px;">Thông tin chuyến bay</span>
-            <!-- <div class="form-field">
+            <div class="form-field">
                 <label for="flight-id">Mã chuyến</label>
                 <input type="text" id="flight-id" name="flight-id"
+                readonly="readonly"
                 disabled="disabled"
                 [(ngModel)]="addFlightRequest.maChuyenBay">
-            </div> -->
+            </div>
     
             <div class="form-field">
                 <label for="departure-location">Nơi xuất phát</label><br>
