--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
@@ -205,14 +205,14 @@
     min-width: 1000px;
     overflow-x: auto;
 }
-.mat-column-ticket_id,
-.mat-column-booking_date,
-.mat-column-customer_id,
-.mat-column-customer_name,
-.mat-column-flight_id,
-.mat-column-seat_type,
-.mat-column-quantity,
-.mat-column-price,
+.mat-column-maVe,
+.mat-column-ngayDatVe,
+.mat-column-maKh,
+.mat-column-tenKhachHang,
+.mat-column-maChuyenBay,
+.mat-column-loaiVe,
+.mat-column-soLuong,
+.mat-column-tongGia,
 .mat-column-approve,
 .mat-column-cancel,
 .mat-column-delete {
