--- a/src/app/pages/guest-management/guest-management.component.scss
+++ b/src/app/pages/guest-management/guest-management.component.scss
@@ -35,9 +35,9 @@ button:hover {
     display: flex;
     margin:50px auto 30px auto;
 }
-#btnThem{
+// #btnThem{
     
-}
+// }
 
 .form-field {
     width: 50%;
@@ -131,8 +131,9 @@ button:hover {
 .mat-column-Sdt,
 .mat-column-Phai,
 .mat-column-GmailKh,
-.mat-column-MaChuyenBay,
-.mat-column-MaVe{
+// .mat-column-MaChuyenBay,
+// .mat-column-MaVe
+.mat-column-MaTaiKhoan{
     color: black;
     text-align: center;
     border-bottom: 1px solid currentColor;
