--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -6,7 +6,8 @@
   </div>
   <a routerLink="/admin-dashboard/guest-management/new-account">
     <div class="col-lg-2 col-md-3">
-      <button type="button" class="btn btn-primary" id="btnThem" style="height: 50px;background-color:#146C94;">Thêm tài khoản</button>
+      <button type="button" class="btn btn-primary" id="btnThem" style="height: 50px;background-color:#146C94;">Thêm tài
+        khoản</button>
     </div>
   </a>
 </div>
@@ -16,7 +17,8 @@
       <label for="select">Tìm kiếm</label>
     </div>
     <div class="col-lg-3 col-md-7">
-      <select class="form-select" aria-label="Default select example" id="select" style="padding-inline: 10px;border-radius: 10px;border: 2px solid #146C94;">
+      <select class="form-select" aria-label="Default select example" id="select"
+        style="padding-inline: 10px;border-radius: 10px;border: 2px solid #146C94;">
         <option selected value="HoTen">Họ Tên</option>
         <option value="MaKH">Mã Khách Hàng</option>
         <option value="Phai">Phái</option>
@@ -26,7 +28,8 @@
       </select>
     </div>
     <div class="col-lg-5 col-md-6">
-      <input type="text" class="form-control" id="search" style="padding-left: 15px;border-radius: 10px;border: 2px solid #146C94;">
+      <input type="text" class="form-control" id="search"
+        style="padding-left: 15px;border-radius: 10px;border: 2px solid #146C94;">
     </div>
     <div class="col-lg-2 col-md-3" id="btnTimKiem">
       <button type="button" class="btn btn-primary">Tìm kiếm</button>
@@ -37,47 +40,38 @@
   <div class="table-container">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" style="background-color: white;">
       <ng-container matColumnDef="MaKhachHang" class="guest-table">
-          <th mat-header-cell *matHeaderCellDef> Mã khách hàng </th>
-          <td mat-cell *matCellDef="let element"> {{element.makhachhang}} </td>
-        </ng-container>
-      
-        <ng-container matColumnDef="HoTenKh" class="guest-table">
-          <th mat-header-cell *matHeaderCellDef> Họ và tên </th>
-          <td mat-cell *matCellDef="let element"> {{element.hoTenKh}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Sdt" class="guest-table">
-          <th mat-header-cell *matHeaderCellDef> Điện thoại </th>
-          <td mat-cell *matCellDef="let element"> {{element.sdt}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Phai" class="guest-table">
-          <th mat-header-cell *matHeaderCellDef> Phái </th>
-          <td mat-cell *matCellDef="let element"> {{element.phai}} </td>
-        </ng-container>
-      
-        <ng-container matColumnDef="GmailKh" class="guest-table">
-          <th mat-header-cell *matHeaderCellDef> Gmail </th>
-          <td mat-cell *matCellDef="let element"> {{element.gmailKh}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="MaChuyenBay" class="guest-table">
-          <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
-          <td mat-cell *matCellDef="let element"> {{element.maChuyenBay}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="MaVe" class="guest-table">
-          <th mat-header-cell *matHeaderCellDef> Mã vé </th>
-          <td mat-cell *matCellDef="let element"> {{element.maVe}} </td>
-        </ng-container>
-        
+        <th mat-header-cell *matHeaderCellDef> Mã khách hàng </th>
+        <td mat-cell *matCellDef="let element"> {{element.makhachhang}} </td>
+      </ng-container>
+      <ng-container matColumnDef="MaTaiKhoan" class="guest-table">
+        <th mat-header-cell *matHeaderCellDef> Mã tài khoản </th>
+        <td mat-cell *matCellDef="let element"> {{element.maTaiKhoan}} </td>
+      </ng-container>
+      <ng-container matColumnDef="HoTenKh" class="guest-table">
+        <th mat-header-cell *matHeaderCellDef> Họ và tên </th>
+        <td mat-cell *matCellDef="let element"> {{element.hoTenKh}} </td>
+      </ng-container>
+      <ng-container matColumnDef="Phai" class="guest-table">
+        <th mat-header-cell *matHeaderCellDef> Phái </th>
+        <td mat-cell *matCellDef="let element"> {{element.phai}} </td>
+      </ng-container>
+      <ng-container matColumnDef="Sdt" class="guest-table">
+        <th mat-header-cell *matHeaderCellDef> Điện thoại </th>
+        <td mat-cell *matCellDef="let element"> {{element.sdt}} </td>
+      </ng-container>
+      <ng-container matColumnDef="GmailKh" class="guest-table">
+        <th mat-header-cell *matHeaderCellDef> Gmail </th>
+        <td mat-cell *matCellDef="let element"> {{element.gmailKh}} </td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
-<div class="paginator-container">
-  <mat-paginator pageSize="10" hidePageSize="true" showFirstLastButtons>
-  </mat-paginator>
-</div>
-<!-- <div>
+  <div class="paginator-container">
+    <mat-paginator pageSize="10" hidePageSize="true" showFirstLastButtons>
+    </mat-paginator>
+  </div>
+  <!-- <div>
   <table class="table table-striped">
     <thead>
       <th>IDKhachHang</th>
