--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -43,10 +43,10 @@
         <th mat-header-cell *matHeaderCellDef> Mã khách hàng </th>
         <td mat-cell *matCellDef="let element"> {{element.makhachhang}} </td>
       </ng-container>
-      <ng-container matColumnDef="MaTaiKhoan" class="guest-table">
+      <!-- <ng-container matColumnDef="MaTaiKhoan" class="guest-table">
         <th mat-header-cell *matHeaderCellDef> Mã tài khoản </th>
         <td mat-cell *matCellDef="let element"> {{element.maTaiKhoan}} </td>
-      </ng-container>
+      </ng-container> -->
       <ng-container matColumnDef="HoTenKh" class="guest-table">
         <th mat-header-cell *matHeaderCellDef> Họ và tên </th>
         <td mat-cell *matCellDef="let element"> {{element.hoTenKh}} </td>
