--- a/src/app/pages/booking-ticket/booking-ticket.component.html
+++ b/src/app/pages/booking-ticket/booking-ticket.component.html
@@ -20,40 +20,41 @@
         <h2 class="color-2 ms-2 mt-2 fw-bold" style="font-size: 20px;">ĐIỂM XUẤT PHÁT</h2>
         <div style="display: flex;justify-content: center;align-items: center;flex-direction: row;flex-wrap: wrap;">
           <input type="radio" class="btn-check" name="check1" id="check-1" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-1">Thanh Hóa</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-1">Việt Nam</label>
           <input type="radio" class="btn-check" name="check1" id="check-2" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-2">Hải Phòng</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-2">Thái Lan</label>
           <input type="radio" class="btn-check" name="check1" id="check-3" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-3">TP.HCM</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-3">Nhật Bản</label>
           <input type="radio" class="btn-check" name="check1" id="check-4" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-4">Hà Nội</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-4">Mỹ</label>
           <input type="radio" class="btn-check" name="check1" id="check-5" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-5">Đà Nẵng</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-5">Pháp</label>
           <input type="radio" class="btn-check" name="check1" id="check-6" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-6">Cần Thơ</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-6">Nga</label>
           <input type="radio" class="btn-check" name="check1" id="check-7" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-7">Quảng Nam</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-7">Singapore</label>
           <input type="radio" class="btn-check" name="check1" id="check-7" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-7">Quảng Nam</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-7">Hồng Kông</label>
         </div>
         <h1 class="color-2 ms-2 mt-2 fw-bold" style="font-size: 20px;">ĐIỂM ĐẾN</h1>
 
         <div style="display: flex;justify-content: center;align-items: center;flex-direction: row;flex-wrap: wrap;">
           <input type="radio" class="btn-check" name="check2" id="check-8" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-8">BSN</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-8">Việt Nam</label>
           <input type="radio" class="btn-check" name="check2" id="check-9" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-9">BSN</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-9">Thái Lan</label>
           <input type="radio" class="btn-check" name="check2" id="check-10" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-10">BSN</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-10">Nhật Bản</label>
           <input type="radio" class="btn-check" name="check2" id="check-11" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-11">BSN</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-11">Mỹ</label>
           <input type="radio" class="btn-check" name="check2" id="check-12" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-12">BSN</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-12">Pháp</label>
           <input type="radio" class="btn-check" name="check2" id="check-13" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-13">BSN</label>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-13">Nga</label>
           <input type="radio" class="btn-check" name="check2" id="check-14" autocomplete="off" checked>
-          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-14">BSN</label>
-
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-14">Singapore</label>
+          <input type="radio" class="btn-check" name="check2" id="check-14" autocomplete="off" checked>
+          <label class="btn btn-primary background-white color-1 fw-bold w-40 m-2" for="check-14">Hồng Kông</label>
         </div>
         <h2 class="color-2 ms-2 mt-2 fw-bold">Ngày xuất phát</h2>
         <div class="input-group mb-3 px-2">
