fix UI admin ticket management

--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
@@ -213,6 +213,7 @@
 .mat-column-loaiVe,
 .mat-column-soLuong,
 .mat-column-tongGia,
+.mat-column-tinhTrang,
 .mat-column-approve,
 .mat-column-cancel,
 .mat-column-delete {
