update some chages

--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
@@ -102,6 +102,11 @@
         <td mat-cell *matCellDef="let element"> {{element.soLuong}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="tinhTrang">
+        <th mat-header-cell *matHeaderCellDef> Tình Trạng </th>
+        <td mat-cell *matCellDef="let element"> {{element.tinhTrang}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="tongGia">
         <th mat-header-cell *matHeaderCellDef> Giá </th>
         <td mat-cell *matCellDef="let element"> {{element.tongGia}} </td>
