--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
@@ -205,6 +205,7 @@
     min-width: 1000px;
     overflow-x: auto;
 }
+.mat-column-maCTV,
 .mat-column-maVe,
 .mat-column-ngayDatVe,
 .mat-column-maKh,
