--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -118,7 +118,7 @@
 
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let element"> <button (ngClick)="deleteFlight($event, element.maChuyenBay)">Xóa</button> </td>
+        <td mat-cell *matCellDef="let element"> <button (click)="deleteFlight($event, element.maChuyenBay)">Xóa</button> </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
